// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingNamespace Hosted version Renders the component 1`] = `
<fragment-stub>
  <div class="container">
    <div class="row mt-4 align-center justify-center">
      <div class="col-sm-8 col">
        <!---->
        <div class="mt-6">
          <div class="row mb-2">
            <div class="col-md-auto col">
              <div class="v-card v-sheet theme--light elevation-0 rounded-0">
                Tenant ID:
              </div>
            </div>
            <div class="ml-auto col-md-auto col">
              <div class="auto v-card v-sheet theme--light elevation-0 rounded-0"><span class="v-chip v-chip--no-color theme--light v-size--default"><span class="v-chip__content"><span data-test="tenant-span">
                    e359bf484715
                  </span> <i aria-hidden="true" class="v-icon notranslate v-icon--right mdi mdi-content-copy theme--light" data-clipboard-click-handler="$3" data-clipboard-success-handler="$4"></i></span></span></div>
            </div>
          </div>
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
        </div>
        <div data-test="editOperation-div" class="mt-6"><span><div class="row"><div class="col"><h3>
                  Namespace
                </h3></div> <div class="spacer"></div> <div class="ml-auto col-md-auto col"><button type="button" class="v-btn v-btn--outlined theme--light v-size--default"><span class="v-btn__content">
                  Rename Namespace
                </span></button></div>
      </div>
      <div class="mt-4 mb-2"><span><div class="v-input ml-3 v-input--is-label-active v-input--is-dirty theme--light v-text-field"><div class="v-input__control"><div class="v-input__slot"><div class="v-text-field__slot"><label for="input-68" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name</label><input required="required" data-test="name-text" id="input-68" type="text"></div></div><div class="v-text-field__details"><div class="v-messages theme--light"><transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub></div></div></div></div></span></div></span>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
    <div data-test="userOperation-div" class="mt-6">
      <div class="row">
        <div class="col">
          <h3>
            Members
          </h3>
        </div>
        <div class="spacer"></div>
        <div data-test="newMember-div">
          <div class="ml-auto col-md-auto col">
            <fragment-stub><button type="button" class="ml-12 v-btn v-btn--outlined theme--light v-size--default" data-test="add-btn"><span class="v-btn__content">
    Add Member
  </span></button>
              <div role="dialog" class="v-dialog__container">
                <!---->
              </div>
            </fragment-stub>
          </div>
        </div>
      </div>
      <div class="mt-5">
        <div role="list" class="v-list v-sheet theme--light">
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user6-list" class="v-list-item__title">
                  user6
                </div>
              </div>
              <div class="spacer"></div>
              <div>
                <div class="ml-auto col-md-auto col">
                  <p data-test="owner-p" class="mr-3">
                    Owner
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user7-list" class="v-list-item__title">
                  user7
                </div>
              </div>
              <div class="spacer"></div>
              <div>
                <div class="ml-auto col-md-auto col"><button type="button" class="v-btn v-btn--outlined theme--light v-size--default" data-test="removeMember-btn"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate material-icons theme--light">delete</i><span class="v-tooltip v-tooltip--bottom"><!----></span></span></button></div>
              </div>
            </div>
          </div>
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user8-list" class="v-list-item__title">
                  user8
                </div>
              </div>
              <div class="spacer"></div>
              <div>
                <div class="ml-auto col-md-auto col"><button type="button" class="v-btn v-btn--outlined theme--light v-size--default" data-test="removeMember-btn"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate material-icons theme--light">delete</i><span class="v-tooltip v-tooltip--bottom"><!----></span></span></button></div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
    <div data-test="securityOperation-div" class="mt-6">
      <form novalidate="novalidate" class="v-form">
        <div class="row">
          <div class="mb-6 col">
            <h3 class="mb-5">
              Security
            </h3>
            <div class="ml-3">
              <div class="v-input theme--light v-input--selection-controls v-input--checkbox">
                <div class="v-input__control">
                  <div class="v-input__slot">
                    <div class="v-input--selection-controls__input"><i aria-hidden="true" class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"></i><input aria-checked="false" id="input-94" role="checkbox" type="checkbox" value="">
                      <div class="v-input--selection-controls__ripple"></div>
                    </div><label for="input-94" class="v-label theme--light" style="left: 0px; position: relative;">Enable session record</label>
                  </div>
                  <div class="v-messages theme--light">
                    <transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub>
                  </div>
                </div>
              </div>
              <p>
                Session record is a feature that allows you to check logged activity when
                connecting to a device.
              </p>
            </div>
          </div>
        </div>
      </form>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
    <div data-test="deleteOperation-div" class="mt-6">
      <h3 class="mb-5">
        Danger Zone
      </h3>
      <div class="row mt-4 mb-2">
        <div class="ml-3 col">
          <h4>
            Delete this namespace
          </h4>
          <div class="ml-2">
            <p>
              After deleting a namespace, there is no going back. Be sure.
            </p>
          </div>
        </div>
        <div class="ml-auto mb-4 col-md-auto col">
          <fragment-stub><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="delete-btn"><span class="v-btn__content">
    Delete namespace
  </span></button>
            <div role="dialog" class="v-dialog__container">
              <!---->
            </div>
          </fragment-stub>
        </div>
      </div>
    </div>
  </div>
  </div>
  </div>
</fragment-stub>
`;

exports[`SettingNamespace Not the owner of this namespace Renders the component 1`] = `
<fragment-stub>
  <div class="container">
    <div class="row mt-4 align-center justify-center">
      <div class="col-sm-8 col">
        <div style="text-align: center;">
          <h3 class="pl-6"><span data-test="notTheOwner-span">
              You're not the owner of this namespace.
            </span>
            <p data-test="namespaceOwnerMessage-p">
              Contact user6 user for more information.
            </p>
          </h3> <br>
        </div>
        <div class="mt-6">
          <div class="row mb-2">
            <div class="col-md-auto col">
              <div class="v-card v-sheet theme--light elevation-0 rounded-0">
                Tenant ID:
              </div>
            </div>
            <div class="ml-auto col-md-auto col">
              <div class="auto v-card v-sheet theme--light elevation-0 rounded-0"><span class="v-chip v-chip--no-color theme--light v-size--default"><span class="v-chip__content"><span data-test="tenant-span">
                    
                  </span> <i aria-hidden="true" class="v-icon notranslate v-icon--right mdi mdi-content-copy theme--light" data-clipboard-click-handler="$87" data-clipboard-success-handler="$88"></i></span></span></div>
            </div>
          </div>
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</fragment-stub>
`;

exports[`SettingNamespace Open version Renders the component 1`] = `
<fragment-stub>
  <div class="container">
    <div class="row mt-4 align-center justify-center">
      <div class="col-sm-8 col">
        <!---->
        <div class="mt-6">
          <div class="row mb-2">
            <div class="col-md-auto col">
              <div class="v-card v-sheet theme--light elevation-0 rounded-0">
                Tenant ID:
              </div>
            </div>
            <div class="ml-auto col-md-auto col">
              <div class="auto v-card v-sheet theme--light elevation-0 rounded-0"><span class="v-chip v-chip--no-color theme--light v-size--default"><span class="v-chip__content"><span data-test="tenant-span">
                    e359bf484715
                  </span> <i aria-hidden="true" class="v-icon notranslate v-icon--right mdi mdi-content-copy theme--light" data-clipboard-click-handler="$99" data-clipboard-success-handler="$100"></i></span></span></div>
            </div>
          </div>
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
          <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
        </div>
        <div data-test="editOperation-div" class="mt-6"><span><div class="row"><div class="col"><h3>
                  Namespace
                </h3></div> <div class="spacer"></div> <div class="ml-auto col-md-auto col"><button type="button" class="v-btn v-btn--outlined theme--light v-size--default"><span class="v-btn__content">
                  Rename Namespace
                </span></button></div>
      </div>
      <div class="mt-4 mb-2"><span><div class="v-input ml-3 v-input--is-label-active v-input--is-dirty theme--light v-text-field"><div class="v-input__control"><div class="v-input__slot"><div class="v-text-field__slot"><label for="input-2120" class="v-label v-label--active theme--light" style="left: 0px; position: absolute;">Name</label><input required="required" data-test="name-text" id="input-2120" type="text"></div></div><div class="v-text-field__details"><div class="v-messages theme--light"><transition-group-stub tag="div" name="message-transition" class="v-messages__wrapper"></transition-group-stub></div></div></div></div></span></div></span>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
    <div data-test="userOperation-div" class="mt-6">
      <div class="row">
        <div class="col">
          <h3>
            Members
          </h3>
        </div>
        <div class="spacer"></div>
        <!---->
      </div>
      <div class="mt-5">
        <div role="list" class="v-list v-sheet theme--light">
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user6-list" class="v-list-item__title">
                  user6
                </div>
              </div>
              <div class="spacer"></div>
              <div data-test="role-div">
                <div class="ml-auto col-md-auto col">
                  <p data-test="role-text">
                    Owner
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user7-list" class="v-list-item__title">
                  user7
                </div>
              </div>
              <div class="spacer"></div>
              <div data-test="role-div">
                <div class="ml-auto col-md-auto col">
                  <p data-test="role-text">
                    Member
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div tabindex="-1" role="listitem" class="v-list-item theme--light">
            <div class="row">
              <div class="ml-auto col-md-auto col"><i aria-hidden="true" class="v-icon notranslate mdi mdi-account theme--light"></i></div>
              <div class="col">
                <div data-test="user8-list" class="v-list-item__title">
                  user8
                </div>
              </div>
              <div class="spacer"></div>
              <div data-test="role-div">
                <div class="ml-auto col-md-auto col">
                  <p data-test="role-text">
                    Member
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    </div>
    <!---->
    <div data-test="deleteOperation-div" class="mt-6">
      <h3 class="mb-5">
        Danger Zone
      </h3>
      <div class="row mt-4 mb-2">
        <div class="ml-3 col">
          <h4>
            Delete this namespace
          </h4>
          <div class="ml-2">
            <p>
              After deleting a namespace, there is no going back. Be sure.
            </p>
          </div>
        </div>
        <div class="ml-auto mb-4 col-md-auto col">
          <fragment-stub><button type="button" class="v-btn v-btn--outlined theme--light v-size--default red--text text--darken-1" data-test="delete-btn"><span class="v-btn__content">
    Delete namespace
  </span></button>
            <div role="dialog" class="v-dialog__container">
              <!---->
            </div>
          </fragment-stub>
        </div>
      </div>
    </div>
  </div>
  </div>
  </div>
</fragment-stub>
`;
